# ludopatia-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway.json
configs/: data.yaml  modeling.yaml
data/: ranking_fifa_official_2024_2026.csv
data/predictions/: fixture_predictions.csv  fixture_score_matrices.json
data/raw/identity/: fifa_associations.html  rsssf_fifa_country_codes.html
data/raw/rankings/: fifa_mens_ranking_2026-06-11.html  fifa_publications_2024-2026_manifest.csv
data/reference/: README.md  competitions.csv  locations.csv  teams.csv  tournament_hosts.csv  world_cup_2026_groups.csv
docs/: categoria_a_fuentes.md  categoria_b_cierre.md  categoria_b_fuentes.md  categoria_c_fuentes.md  categoria_d_fuentes.md  categoria_e_fuentes.md  contexto.md  estrategia_datos.md  fase_2_progreso.md  fases_0_1.md  plan_v2.md
migrations/: env.py
migrations/versions/: 20260613_01_initial_schema.py  20260613_02_tournament_groups.py
src/predictor/: __init__.py
tests/api/: test_groups.py  test_health.py  test_matches.py  test_models.py  test_teams.py
tests/integration/: test_backtest_model.py  test_build_features.py  test_build_ratings.py  test_canonical_matches.py  test_dixon_coles_backtest.py  test_predict_fixtures.py  test_segment_diagnostics.py  test_train_model.py
tests/unit/: test_backtest.py  test_database_bootstrap.py  test_database_schema.py  test_dixon_coles.py  test_elo.py  test_feature_search.py  test_features.py  test_fifa_snapshots.py  test_health.py  test_inference.py  test_settings.py  test_training.py
(+464 files in other folders)
