[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "world-cup-predictor"
version = "0.1.0"
description = "Trainable and auditable football probability model."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "pandas>=2.2,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "typer>=0.15,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.11,<1",
]
ml = [
    "joblib>=1.4,<2",
    "scikit-learn>=1.6,<2",
    "scipy>=1.15,<2",
]

[project.scripts]
predictor = "predictor.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/predictor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
